# vite-plugin-rsw

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pnpm-workspace.yaml  tsconfig.json
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml
example/: index.html  package.json  vite.config.ts
example/@rsw/hey/: Cargo.toml
example/rsw/: Cargo.toml
example/rsw-test/: Cargo.toml
example/rsw/src/: lib.rs
example/src/: App.tsx
example/src/rsw.d/: rsw-test.d.ts  rsw.d.ts
examples/react/: index.html  package.json  vite.config.ts
examples/react/@rsw/hey/: Cargo.toml
examples/react/@rsw/hey/src/: lib.rs
examples/react/rsw-test/: Cargo.toml
examples/react/src/: App.tsx
examples/vue3/: .rswrc.json  index.html  package.json  vite.config.ts
examples/vue3/@rsw/hey/src/: lib.rs
examples/vue3/rsw-test/: Cargo.toml
examples/vue3/src/: App.vue
examples/vue3/src/components/: HelloWasm.vue
src/: compiler.ts  index.ts  overlay.ts  rserr.ts  rswerr.ts  template.ts  types.ts  utils.ts  watch.ts
