[package]
name = "rsw-test"
version = "0.1.0"
authors = ["lencx <cxin1314@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
wasm-opt = false

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
wasm-bindgen = "0.2.69"